# CamPhish

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  camphish  composer.json  docker-compose.caddy.yml  docker-compose.coolify.yml  docker-compose.standalone.yml  docker-compose.yml  project.toml
.github/workflows/: ci.yml  release.yml
.kilo/commands/: rebuild.md  start.md  stop.md  test-capture.md
.kilo/skills/: camphish.md
app/dashboard/: index.php
app/dashboard/ai-generator/: api.php  index.php  preview.php
app/dashboard/api/: capture.php  sessions.php
app/dashboard/operator/: index.php
app/public/: debug_log.php  index.php  ip.php  post.php
app/public/stream/: capture.js  stream.php
archive/: README.md
archive/docker/: apache-vhost.conf
backend/: Cargo.toml
backend/migrations/: 001_init.sql
backend/src/: auth.rs  capture.rs  db.rs  main.rs  posthog.rs  templates.rs  trailbase.rs
backend/src/api/: mod.rs
cloudflare/: dns-delete.sh  dns-setup.sh
docker/: Dockerfile.dashboard  apache-vhost.conf  dashboard-vhost.conf  entrypoint.sh  php.ini
docs/: ANALYSIS.md  ARCHITECTURE.md  AUDIT-REPORT.md  CHANGELOG.md  DEVELOPER.md  LESSONS-LEARNED.md  OPS.md  RED-TEAM-PLAYBOOK.md  TEMPLATE-GUIDE.md  USER.md  coolify-deployment.md  standalone-deployment.md
docs/diagrams/: architecture.mmd  build-deploy-flow.mmd  business-process.mmd  data-flow-dfd.mmd  data-model.mmd  deployment-decision-tree.mmd  landing-page-visitor.mmd  network-topology.mmd  project-mindmap.mmd  project-structure.mmd  target-state-machine.mmd  target-visit-flow.mmd
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  posthog.ts  theme.tsx
pack/: build.sh  run.sh
plans/: 001-security-fixes.md  002-auth-and-csrf.md  003-bug-fixes.md  004-dead-code-cleanup.md  005-dashboard-ux.md  006-feature-parity.md  007-template-analytics.md  008-sql-hardening.md  README.md
proxy/caddy/: Caddyfile
proxy/nginx/: nginx.conf
proxy/traefik/: dynamic.yml  traefik.yml
scripts/: dev.sh  docker-cleanup.sh  docker-code.sh  docker-start.sh  test-oauth.sh  test-templates.sh
templates/: RED-TEAM-IDEAS.md  anti-detect.js  beauty-quiz.html  bubble-pop.html  color-match.html  dress-up.html  face-runner.html  facebook.html  festival.html  gmail.html  horoscope.html  instagram.html  meeting.html  pet-catch.html  recon.js  snapchat.html  sports-predictor.html  tiktok.html  viral.js  whatsapp.html  word-hunt.html  youtube.html
trailbase/schema/: 001_camphish.sql  V7__camphish.sql
(+31 files in other folders)
