[package]
name = "camphish"
version = "2.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "compression-gzip"] }
tower = "0.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
dotenvy = "0.15"
regex = "1"
mime_guess = "2"
reqwest = { version = "0.12", features = ["json", "multipart"] }

[profile.release]
opt-level = 3
lto = true
strip = true
