[package]
name = "camphish"
version = "2.1.1"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "compression-gzip", "limit"] }
tower = "0.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v5"] }
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
dotenvy = "0.15"
heck = "0.5"
regex = "1"
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
posthog-rs = "0.13"
jsonwebtoken = "9"

[profile.release]
opt-level = 3
lto = true
strip = true
